# rust-script

./: .gitignore  AGENTS.md  commit_analysis.md  rebuild.sh  run_all_tests.sh  rustc
probes/: Cargo.toml  test-custom-syntax  test-custom-syntax.rs  test_library_test.rust  test_nil.rust  test_not_truthiness.rust  test_null_coalesce.rust  test_or_replaces_null_coalesce.rust  test_return_without_arrow.rust
probes/.cargo/: config.toml
probes/notes/: and-or-cargo-fix.md  session_05a23eda.md  session_1db1f022.md  session_22bb10bc.md  session_259ef3d3.md  session_28a1f194.md  session_3082db10.md  session_3d2b9327.md  session_a1d4c8a8.md  session_a3baf9cc.md  session_a539d8f7.md  session_a8af2223.md  session_a927796c.md  session_c59e3de0.md  session_e4ee2eab.md
probes/tests/: test_and_or.rust  test_array_1indexed.rust  test_array_like_slice.rust  test_as_cast.rust  test_as_cast_comprehensive.rust  test_as_cast_convert.rust  test_assert.rust  test_assign.rust  test_at_map.rust  test_at_vec.rust  test_auto_return.rust  test_box.rust  test_byte.rust  test_check_reverse.rust  test_class.rust  test_class_derive.rust  test_comments.rust  test_continue.rust  test_def.rust  test_def_simple.rust  test_dot_conflict.rust  test_dynexport.rust  test_ellipsis.rust  test_enum.rust  test_enum_string.rust  test_exclamation_syntax.rust  test_exit.rust  test_explicit_main.rust  test_filter_select_simple.rust  test_filter_suggestion.rust  test_filter_synonyms.rust  test_for_in_key_value.rust  test_for_key_in.rust  test_for_loop.rust  test_hash_index.rust  test_hash_minimal.rust  (+73 more)
(+444 files in other folders)
