[workspace]
# Declare this as an independent workspace to prevent IDEs from
# indexing the parent Rust compiler workspace during rebuilds

[package]
name = "probes"
version = "0.1.0"
edition = "2021"

# This is a test-only crate for custom Rust syntax extensions
# Tests should be run with ./run_all_tests.sh using the custom rustc
# Tests are .rust files compiled with custom rustc

[lib]
path = "lib.rs"
test = false

# Auto-discover test files with .rust extension in tests/ directory
# Cargo normally only looks for .rs files, so we need to explicitly list them
# or use a build script to generate test entries

[dependencies]
